--- a/custom_types.yaml
+++ b/custom_types.yaml
@@ -546,6 +546,10 @@ node_types:
   tosca.nodes.indigo.GalaxyWNCVMFS:
     derived_from: tosca.nodes.indigo.GalaxyWN
     properties:
+      storage_encryption:
+        type: boolean
+        description: Install api when storage is encrypted
+        default: false
       reference_data:
         type: boolean
         description: Install Reference data
@@ -605,6 +609,7 @@ node_types:
           inputs:
             galaxy_front_end_ip: { get_property: [ SELF, front_end_ip ] }
             export_dir: { get_property: [ SELF, export_dir ] }
+            storage_encryption: { get_property: [ SELF, storage_encryption ] }
             get_refdata: { get_property: [ SELF, reference_data ] }
             refdata_cvmfs_configuration: { get_property: [ SELF, refdata_cvmfs_configuration ] }
             refdata_cvmfs_repository_name: { get_property: [ SELF, refdata_cvmfs_repository_name ] }
