Update galaxy support (#288)
* enable vault integration

* fix requred fields

* fix artifact url

* update fastconfig role

* fix galaxy-express

* add docker galaxy

* add docker role download

* fix dependency

* fix galaxy docker flavor

* removed unuseful iam client and id

* remove iam variables from galaxy encryption system

* test galaxy fixes

* update fastconfig custom type

* update for new refdata role

* disable custom script

* fix for galaxy WNs

* add slurm galaxy specific custom types

* allow to pass wn_ips for luksctl_api nfs restart on slurm nodes

* removed tool-deps support, installa API on Worker Node for NFS restart

* remove unuseful galaxy-flavor pretask

* add storage encryption info for api installation

* fix application virtualization type

* remove tooldeps

* removed tooldeps

* fix docker role source

* revert default galaxy flavour

* switch to tosca-types tag v3.0.1

--- a/artifacts/galaxy/galaxy_wn_configure_cvmfs.yml
+++ b/artifacts/galaxy/galaxy_wn_configure_cvmfs.yml
@@ -2,24 +2,21 @@
 - hosts: localhost
   connection: local
   pre_tasks:
-    - set_fact:
-        galaxy_flavor: 'galaxy-no-tools'
-      when: galaxy_flavor == 'galaxy-minimal'
     - name: Get reference data cvmfs key for on-the-fly configuration
       get_url:
         url: 'https://raw.githubusercontent.com/indigo-dc/Reference-data-galaxycloud-repository/master/cvmfs_server_keys/{{ refdata_cvmfs_key_file }}'
         dest: '/tmp'
-      when: refdata_provider_type == 'cvmfs'
+      when: refdata_cvmfs_configuration == 'cvmfs'
     - name: Get reference data cvmfs key for preconfigured repository
       get_url:
         url: 'https://raw.githubusercontent.com/indigo-dc/Reference-data-galaxycloud-repository/master/cvmfs_server_keys/{{ refdata_cvmfs_repository_name }}.pub'
         dest: '/tmp'
-      when: refdata_provider_type == 'cvmfs_preconfigured'
+      when: refdata_cvmfs_configuration == 'cvmfs_preconfigured'
     - name: Get reference data cvmfs configuration for preconfigured repository
       get_url:
         url: 'https://raw.githubusercontent.com/indigo-dc/Reference-data-galaxycloud-repository/master/cvmfs_server_config_files/{{ refdata_cvmfs_repository_name }}.conf'
         dest: '/tmp'
-      when: refdata_provider_type == 'cvmfs_preconfigured'
+      when: refdata_cvmfs_configuration == 'cvmfs_preconfigured'
 
   tasks:
     - local_action: get_url url=https://raw.githubusercontent.com/indigo-dc/ansible-role-galaxycloud/master/defaults/main.yml dest=/tmp/galaxywn.yml
@@ -38,9 +35,10 @@
       authorized_key: user={{galaxy_user}} key="{{ lookup('file', '/tmp/' + galaxy_user + '_id_rsa.pub') }}"
 
   roles:
-    - role: indigo-dc.galaxycloud-tooldeps
+    - role: indigo-dc.galaxycloud-os
       type_of_node: wn
-      GALAXY_VERSION: '{{ galaxy_version }}'
+      when:
+        - storage_encryption|bool
 
     - role: indigo-dc.cvmfs-client
       server_url: '{{ refdata_cvmfs_server_url }}'
@@ -51,7 +49,7 @@
       cvmfs_mountpoint: '{{ refdata_dir }}'
       when:
         - get_refdata|bool
-        - refdata_provider_type == 'cvmfs'
+        - refdata_cvmfs_configuration == 'cvmfs'
 
     - role: indigo-dc.cvmfs-client
       repository_name: '{{ refdata_cvmfs_repository_name }}'
@@ -60,7 +58,7 @@
       cvmfs_preconfigured: true
       when:
         - get_refdata|bool
-        - refdata_provider_type == 'cvmfs_preconfigured'
+        - refdata_cvmfs_configuration == 'cvmfs_preconfigured'
 
     - role: indigo-dc.nfs
       nfs_mode: 'client'
