--- a/examples/hybrid_elastic_cluster_vr.yaml
+++ b/examples/hybrid_elastic_cluster_vr.yaml
@@ -25,25 +25,25 @@ topology_template:
     fe_mem:
       type: scalar-unit.size
       description: Amount of Memory for the front-end node
-      default: 1 GB
+      default: 2 GB
       required: yes
 
     wn_cpus:
       type: integer
       description: Numer of CPUs for the WNs
-      default: 1
+      default: 2
       required: yes
 
     wn_mem:
       type: scalar-unit.size
       description: Amount of Memory for the WNs
-      default: 1 GB
+      default: 3 GB
       required: yes
 
     hybrid:
       type: boolean
       description: Flag to specify that this cluster will work in an hybrid environment
-      default: false
+      default: true
       required: false
 
   node_templates:
@@ -60,6 +60,12 @@ topology_template:
         - lrms: lrms_front_end
         - wn: wn_node
 
+    indigovr_cp:
+      type: tosca.nodes.indigo.VR.CentralPoint
+      requirements:
+        - host:
+            node: lrms_server
+
     lrms_front_end:
       type: tosca.nodes.indigo.LRMS.FrontEnd.Slurm
       properties:
@@ -67,6 +73,7 @@ topology_template:
         hybrid: { get_input: hybrid }
       requirements:
         - host: lrms_server
+        - dependency: indigovr_cp
 
     lrms_server:
       type: tosca.nodes.indigo.Compute
@@ -75,6 +82,10 @@ topology_template:
           properties:
             dns_name: slurmserver
             network_name: PUBLIC
+            ports:
+              openvpn:
+                protocol: udp
+                source: 1194
         host:
           properties:
             num_cpus: { get_input: fe_cpus }
@@ -98,7 +109,16 @@ topology_template:
             min_instances: 0
       requirements:
         - host: lrms_wn
-            
+        - dependency: indigovr_client
+
+    indigovr_client:
+      type: tosca.nodes.indigo.VR.Client
+      requirements:
+        - central_point:
+            node: indigovr_cp
+        - host:
+            node: lrms_wn
+
     lrms_wn:
       type: tosca.nodes.indigo.Compute
       capabilities:
@@ -121,3 +141,13 @@ topology_template:
     cluster_creds:
       value: { get_attribute: [ lrms_server, endpoint, credential, 0 ] }
 
+  policies:
+    - deploy_on_ifca:
+        type: tosca.policies.indigo.SlaPlacement
+        properties: { sla_id: 5cf12da6cb0e8f527dfb3c97 }
+        targets: [ lrms_wn ]
+
+#    - deploy_on_recas:
+#        type: tosca.policies.indigo.SlaPlacement
+#        properties: { sla_id: 5bfbc091a9a88f528bf5114b }
+#        targets: [ lrms_server ]
