--- a/examples/hybrid_elastic_cluster_vr_l2_add.yaml
+++ b/examples/hybrid_elastic_cluster_vr_l2_add.yaml
@@ -2,7 +2,7 @@ tosca_definitions_version: tosca_simple_yaml_1_0
 
 imports:
   - indigo_custom_types: https://raw.githubusercontent.com/indigo-dc/tosca-types/devel/custom_types.yaml
- 
+
 description: >
   TOSCA test for launching a Virtual Elastic Cluster. It will launch
   a single front-end that will be in change of managing the elasticity
@@ -25,28 +25,80 @@ topology_template:
     fe_mem:
       type: scalar-unit.size
       description: Amount of Memory for the front-end node
-      default: 1 GB
+      default: 2 GB
       required: yes
 
     wn_cpus:
       type: integer
       description: Numer of CPUs for the WNs
-      default: 1
+      default: 2
       required: yes
 
     wn_mem:
       type: scalar-unit.size
       description: Amount of Memory for the WNs
-      default: 1 GB
+      default: 3 GB
       required: yes
 
     hybrid:
       type: boolean
       description: Flag to specify that this cluster will work in an hybrid environment
-      default: false
+      default: true
       required: false
 
   node_templates:
+
+    pub_network:
+      type: tosca.nodes.network.Network
+      properties:
+        network_type: public
+        network_name: public-muni-147-251-124
+
+    server_pub_port:
+      type: tosca.nodes.network.Port
+      properties:
+        order: 1
+      requirements:
+        - binding: lrms_server
+        - link: pub_network
+
+    network1:
+      type: tosca.nodes.network.Network
+      properties:
+        cidr: '192.168.10.0/24'
+        gateway_ip: '192.168.0.0/16,lrms_server'
+        network_type: private
+
+    server_port:
+      type: tosca.nodes.network.Port
+      properties:
+        order: 0
+      requirements:
+        - binding: lrms_server
+        - link: network1
+
+    wn_port:
+      type: tosca.nodes.network.Port
+      properties:
+        order: 0
+      requirements:
+        - binding: lrms_wn
+        - link: network2
+
+    network2:
+      type: tosca.nodes.network.Network
+      properties:
+        cidr: '192.168.20.0/24'
+        gateway_ip: '192.168.0.0/16,vr2_compute'
+        network_type: private
+
+    router2_port:
+      type: tosca.nodes.network.Port
+      properties:
+        order: 0
+      requirements:
+        - binding: vr2_compute
+        - link: network2
 
     elastic_cluster_front_end:
       type: tosca.nodes.indigo.ElasticCluster
@@ -60,6 +112,12 @@ topology_template:
         - lrms: lrms_front_end
         - wn: wn_node
 
+    indigovr_cp:
+      type: tosca.nodes.indigo.VR.CentralPoint
+      requirements:
+        - host:
+            node: lrms_server
+
     lrms_front_end:
       type: tosca.nodes.indigo.LRMS.FrontEnd.Slurm
       properties:
@@ -67,6 +125,7 @@ topology_template:
         hybrid: { get_input: hybrid }
       requirements:
         - host: lrms_server
+        - dependency: indigovr_cp
 
     lrms_server:
       type: tosca.nodes.indigo.Compute
@@ -74,7 +133,10 @@ topology_template:
         endpoint:
           properties:
             dns_name: slurmserver
-            network_name: PUBLIC
+            ports:
+              openvpn:
+                protocol: udp
+                source: 1194
         host:
           properties:
             num_cpus: { get_input: fe_cpus }
@@ -82,15 +144,13 @@ topology_template:
         os:
           properties:
               type: linux
-              distribution: ubuntu
-              version: 16.04
+              image: ost://identity.cloud.muni.cz/e8d75fc1-ac32-4851-90b5-b4c925e9e6f8
 
     wn_node:
       type: tosca.nodes.indigo.LRMS.WorkerNode.Slurm
       properties:
         front_end_ip: { get_attribute: [ lrms_server, private_address, 0 ] }
         public_front_end_ip: { get_attribute: [ lrms_server, public_address, 0 ] }
-        hybrid: { get_input: hybrid }
       capabilities:
         wn:
           properties:
@@ -98,13 +158,15 @@ topology_template:
             min_instances: 0
       requirements:
         - host: lrms_wn
-            
+        - dependency: indigovr_router2
+        - dependency: indigovr_cp
+
     lrms_wn:
       type: tosca.nodes.indigo.Compute
       capabilities:
         scalable:
           properties:
-            count: 0
+            count: 2
         host:
           properties:
             num_cpus: { get_input: wn_cpus }
@@ -112,12 +174,30 @@ topology_template:
         os:
           properties:
               type: linux
-              distribution: ubuntu
-              version: 16.04
+              image: ost://horsemen.i3m.upv.es/877c4fad-34cf-4422-a565-8bb6e10c3bec
+
+    indigovr_router2:
+      type: tosca.nodes.indigo.VR.VRouter
+      requirements:
+        - central_point:
+            node: indigovr_cp
+        - host:
+            node: vr2_compute
+
+    vr2_compute:
+      type: tosca.nodes.indigo.Compute
+      capabilities:
+        host:
+          properties:
+            num_cpus: 1
+            mem_size: 1 GB
+        os:
+          properties:
+              image: ost://horsemen.i3m.upv.es/877c4fad-34cf-4422-a565-8bb6e10c3bec
+              type: linux
 
   outputs:
     cluster_ip:
       value: { get_attribute: [ lrms_server, public_address, 0 ] }
     cluster_creds:
       value: { get_attribute: [ lrms_server, endpoint, credential, 0 ] }
-
