--- a/custom_types.yaml
+++ b/custom_types.yaml
@@ -738,6 +738,12 @@ node_types:
 
   tosca.nodes.indigo.GalaxyPortalDocker:
     derived_from: tosca.nodes.indigo.GalaxyPortalAndStorage
+    properties:
+      refdata_cvmfs_repository_name:
+        type: string
+        description: CernVM-FS repository name
+        default: 'elixir-italy.galaxy.refdata'
+        required: false
     artifacts:
       nfs_role:
         file: indigo-dc.nfs
@@ -772,6 +778,7 @@ node_types:
             export_dir: { get_property: [ SELF, export_dir ] }
             galaxy_flavor: { get_property: [ SELF, flavor ] }
             get_refdata: { get_property: [ SELF, reference_data ] }
+            refdata_cvmfs_repository_name: { get_property: [ SELF, refdata_cvmfs_repository_name ] }
 
   tosca.nodes.indigo.TeskAPI:
     derived_from: tosca.nodes.WebServer
