--- a/custom_types.yaml
+++ b/custom_types.yaml
@@ -2432,7 +2432,7 @@ node_types:
             kube_version: { get_property: [ SELF, kube_version ] }
             kube_front_end_ip: { get_property: [ SELF, front_end_ip ] }
             wn_hybrid_cluster:  { get_property: [ SELF, hybrid] }
-            kube_network: { get_property: [ SELF, admin_token] }
+            kube_network: { get_property: [ SELF, kube_network] }
 
   tosca.nodes.indigo.LRMS.FrontEnd.Kubernetes:
     derived_from: tosca.nodes.indigo.LRMS.FrontEnd
@@ -2476,7 +2476,7 @@ node_types:
             fe_hybrid_cluster:  { get_property: [ SELF, hybrid] }
             kube_admin_username:  { get_property: [ SELF, admin_username] }
             kube_admin_token:  { get_property: [ SELF, admin_token] }
-            kube_network: { get_property: [ SELF, admin_token] }
+            kube_network: { get_property: [ SELF, kube_network] }
 
   tosca.nodes.indigo.JupyterHub:
     derived_from: tosca.nodes.SoftwareComponent
