--- a/artifacts/k3s/install.yml
+++ b/artifacts/k3s/install.yml
@@ -3,10 +3,10 @@
   roles:
     - role: 'indigo-dc.nfs'
       nfs_mode: 'server'
-      nfs_exports: [{path: "/home", export: "vnode*.localdomain(fsid=0,rw,async,no_root_squash,no_subtree_check,insecure)"}] 
+      nfs_exports: [{path: "/root", export: "vnode*.localdomain(fsid=0,rw,async,no_root_squash,no_subtree_check,insecure)"}] 
       when: (mode == "server")
     - role: 'indigo-dc.nfs'
       nfs_mode: 'client'
-      nfs_client_imports: [{ local: "/home", remote: "/home", server_host: "{{ master_ip }}" }]
+      nfs_client_imports: [{ local: "/mnt/nfs", remote: "/root", server_host: "{{ master_ip }}" }]
       when: (mode == "node")
     - role: cloud-pg.ansible_role_k3s 
