--- a/custom_types.yaml
+++ b/custom_types.yaml
@@ -1436,7 +1436,10 @@ node_types:
         required: no
         type: boolean
         default: true
-
+    artifacts:
+      image:
+        file: ""
+        type: "tosca.artifacts.Deployment.Image.Container.Docker"
 
   tosca.nodes.indigo.LRMS.FrontEnd.Mesos:
     derived_from: tosca.nodes.indigo.LRMS.FrontEnd
