Set indigovr master branch and set INDIGOVR_MTU param

--- a/artifacts/lrms/kubernetes/kube_fe_install.yml
+++ b/artifacts/lrms/kubernetes/kube_fe_install.yml
@@ -18,6 +18,7 @@
         name: indigo-dc.indigovr
       vars:
         INDIGOVR_NODE_TYPE: centralpoint
+        INDIGOVR_MTU: 1400
 
     - name: Add Master VPN IP in host
       replace:
