--- a/artifacts/lrms/slurm/slurm_fe_install.yml
+++ b/artifacts/lrms/slurm/slurm_fe_install.yml
@@ -17,6 +17,7 @@
         name: indigo-dc.indigovr
       vars:
         INDIGOVR_NODE_TYPE: centralpoint
+        INDIGOVR_MTU: 1400
 
     - name: Add Master VPN IP in host
       replace:
