--- a/artifacts/mesos/mesos_slave_install.yml
+++ b/artifacts/mesos/mesos_slave_install.yml
@@ -17,6 +17,7 @@
         vars:
           INDIGOVR_NODE_TYPE: standalone
           INDIGOVR_CENTRALPOINT_IP: '{{ public_front_end_ip }}'
+          INDIGOVR_MTU: 1400
 
       - name: Refresh setup data to get new ansible_tun0 item
         setup:
