--- a/examples/galaxy_fastconfig_elixir_it.yaml
+++ b/examples/galaxy_fastconfig_elixir_it.yaml
@@ -1,22 +1,20 @@
 tosca_definitions_version: tosca_simple_yaml_1_0
 
 imports:
-  - indigo_custom_types: https://raw.githubusercontent.com/indigo-dc/tosca-types/master/custom_types.yaml
+  - indigo_custom_types: https://raw.githubusercontent.com/indigo-dc/tosca-types/v3.0.1/custom_types.yaml
 
 description: >
-  TOSCA test for launching a Galaxy Server also configuring the bowtie2
-  tool using Galaxy Tool Shed.
+  Deploy Galaxy on a single Virtual Machine from a VM image (FAST).
+  The basic configuration includes CentOS 7, the selected Galaxy flavour, companion software and reference data.
+  Configure, click on the "Submit" button and wait for the confirmation e-mail(s) with instructions on how to provide your passphrase (if encryption is enabled) and log in to your new Galaxy instance.
+  If after some hours you do not receive any e-mail please be sure to check your SPAM BOX.
 
 topology_template:
   inputs:
-    number_cpus:
-      type: integer
-      description: number of cpus required for the instance
-      default: 1
-    memory_size:
+    instance_flavor:
       type: string
-      description: ram memory required for the instance
-      default: 1 GB
+      description: instance flavor (num_cpu, memory, disk)
+      default: small
     storage_size:
       type: string
       description: storage memory required for the instance
@@ -51,22 +49,31 @@ topology_template:
       description: path to store galaxy data
       default: /export
 
-    galaxy_storage_type:
+    storage_encryption:
+      type: boolean
+      description: Enable storage encryption using Vault to store secrets and LUKS to encrypt
+      default: False
+      required: true
+    vault_url:
       type: string
-      description: Storage type (Iaas Block Storage, Onedata, Filesystem encryption)
-      default: "onedata"
-    userdata_provider:
+      description: Hashicorp Vault server url
+      default: changeit
+      required: false
+    vault_wrapping_token:
       type: string
-      description: default OneProvider
-      default: "not_a_privder_url"
-    userdata_token:
+      description: Vault Wrapping token to write secret
+      default: not_a_wrapping_token
+      required: false
+    vault_secret_path:
       type: string
-      description: Access token for onedata space
-      default: "not_a_token"
-    userdata_space:
+      description: Vault path to store secret
+      default: "subject/depuuid"
+      required: false
+    vault_secret_key:
       type: string
-      description: Onedata space
-      default: "galaxy"
+      description: Vault secret key name
+      default: secret
+      required: false
 
     flavor:
       type: string
@@ -77,38 +84,22 @@ topology_template:
       type: boolean
       description: Install Reference data
       default: true
-    refdata_dir:
+    refdata_cvmfs_configuration:
       type: string
-      description: path to store galaxy reference data
-      default: /refdata
-    refdata_repository_name:
+      description: Configure cvmfs or load preconfigured repository
+      default: 'cvmfs_preconfigured'
+    refdata_cvmfs_repository_name:
       type: string
-      description: Onedata space name, CernVM-FS repository name or subdirectory downaload name
+      description: CernVM-FS repository name
       default: 'elixir-italy.galaxy.refdata'
-    refdata_provider_type:
-      type: string
-      description: Select Reference data provider type (Onedata, CernVM-FS or download)
-      default: 'onedata'
-    refdata_provider:
-      type: string
-      description: Oneprovider for reference data
-      default: 'not_a_provider'
-    refdata_token:
-      type: string
-      description: Access token for reference data
-      default: 'not_a_token'
     refdata_cvmfs_server_url:
       type: string
       description: CernVM-FS server, replica or stratum-zero
-      default: 'server_url'
-    refdata_cvmfs_repository_name:
-      type: string
-      description: Reference data CernVM-FS repository name
-      default: 'not_a_cvmfs_repository_name'
+      default: '90.147.102.186'
     refdata_cvmfs_key_file:
       type: string
       description: CernVM-FS public key
-      default: 'not_a_key'
+      default: 'elixir-italy.galaxy.refdata.pub'
     refdata_cvmfs_proxy_url:
       type: string
       description: CernVM-FS proxy url
@@ -117,53 +108,45 @@ topology_template:
       type: integer
       description: CernVM-FS proxy port
       default: 80
-
+    refdata_dir:
+      type: string
+      description: path to store galaxy reference data
+      default: /cvmfs
  
   node_templates:
 
     galaxy:
-      type: tosca.nodes.indigo.GalaxyPortalAndStorage
+      type: tosca.nodes.indigo.GalaxyPortalFastConfig
       properties:
-        os_storage: { get_input: galaxy_storage_type }
-        token: { get_input: userdata_token }
-        provider: { get_input: userdata_provider }
-        space: { get_input: userdata_space }
+        storage_encryption: { get_input: storage_encryption }
+        vault_url: { get_input: vault_url }
+        vault_wrapping_token: { get_input: vault_wrapping_token }
+        vault_secret_path: { get_input: vault_secret_path }
+        vault_secret_key: { get_input: vault_secret_key }
         admin_email: { get_input: admin_email }
         admin_api_key: { get_input: admin_api_key }
         version: { get_input: version }
         instance_description: { get_input: instance_description }
         instance_key_pub: { get_input: instance_key_pub }
         export_dir: { get_input: export_dir }
+        flavor: { get_input: flavor }
       requirements:
         - lrms: local_lrms
-
-    galaxy_tools:
-      type: tosca.nodes.indigo.GalaxyShedTool
-      properties:
-        flavor: { get_input: flavor }
-        admin_api_key: { get_input: admin_api_key }
-        version: { get_input: version }
-      requirements:
-        - host: galaxy
 
     galaxy_refdata:
       type: tosca.nodes.indigo.GalaxyReferenceData
       properties:
         reference_data: { get_input: reference_data }
-        refdata_dir: { get_input: refdata_dir }
-        flavor: { get_input: flavor }
-        refdata_repository_name: { get_input: refdata_repository_name }
-        refdata_provider_type: { get_input: refdata_provider_type }
-        refdata_provider: { get_input: refdata_provider }
-        refdata_token: { get_input: refdata_token }
-        refdata_cvmfs_server_url: { get_input: refdata_cvmfs_server_url }
+        refdata_cvmfs_configuration: { get_input: refdata_cvmfs_configuration }
         refdata_cvmfs_repository_name: { get_input: refdata_cvmfs_repository_name }
+        refdata_cvmfs_server_url: { get_input: refdata_cvmfs_server_url }
         refdata_cvmfs_key_file: { get_input: refdata_cvmfs_key_file }
         refdata_cvmfs_proxy_url: { get_input: refdata_cvmfs_proxy_url }
         refdata_cvmfs_proxy_port: { get_input: refdata_cvmfs_proxy_port }
+        refdata_dir: { get_input: refdata_dir }
+        flavor: { get_input: flavor }
       requirements:
         - host: galaxy
-        - dependency: galaxy_tools
 
     # type to describe a Galaxy not using any LRMS but using the local system
     local_lrms:
@@ -177,22 +160,31 @@ topology_template:
         endpoint:
           properties:
             network_name: PUBLIC
+            private_ip: false
             ports:
+              galaxyctl_api_port:
+                protocol: tcp
+                source: 5001
+              luks_api_port:
+                protocol: tcp
+                source: 5000
               http_port:
                 protocol: tcp
                 source: 80
               ftp_port:
                 protocol: tcp
                 source: 21
+              ftp_passive:
+                protocol: tcp
+                source_range: [ 30000, 30009 ]
         # Host container properties
         host:
          properties:
-           num_cpus: { get_input: number_cpus }
-           mem_size: { get_input: memory_size }
+           instance_type: { get_input: instance_flavor }
         # Guest Operating System properties
         os:
           properties:
-            image: linux-ubuntu-16.04-vmi
+            image: { concat: ['centos-7-', get_input: flavor,'-', get_input: version ] } # centos-7-galaxy-no-tools-release_17.05
       requirements:
         # contextually this can only be a relationship type
         - local_storage:
@@ -205,12 +197,13 @@ topology_template:
                 location: { get_input: export_dir }
                 device: hdb
 
-    # TODO remove this section. Currently needed fot nginx upload plugin.
     my_block_storage:
       type: tosca.nodes.BlockStorage
       properties:
         size: { get_input: storage_size }
 
   outputs:
-    galaxy_url:
+    endpoint:
       value: { concat: [ 'http://', get_attribute: [ galaxy_server, public_address, 0 ], '/galaxy' ] }
+    node_ip:
+      value: { get_attribute: [ galaxy_server, public_address, 0 ] }
