--- a/examples/galaxy_fastconfig_elixir_it.yaml
+++ b/examples/galaxy_fastconfig_elixir_it.yaml
@@ -79,6 +79,10 @@ topology_template:
       type: string
       description: Galaxy flavor for tools installation
       default: "galaxy-no-tools"
+    remote_tool_deps_dir_url:
+      type: string
+      description: tools tar gz location
+      default: 'http://cloud.recas.ba.infn.it:8080/v1/AUTH_3b4918e0a982493e8c3ebcc43586a2a8/Laniakea-galaxy-tools-tar'
 
     reference_data:
       type: boolean
@@ -130,6 +134,7 @@ topology_template:
         instance_key_pub: { get_input: instance_key_pub }
         export_dir: { get_input: export_dir }
         flavor: { get_input: flavor }
+        remote_tool_deps_dir_url: {get_input: remote_tool_deps_dir_url }
       requirements:
         - lrms: local_lrms
 
